force-app/main/default/objects/Ideas_Register__c/Ideas_Register__c.object-meta.xml
<CustomObject>
    <description>Ideas and Improvements Register</description>
    <label>Ideas and Improvements Register</label>
    <nameField>
        <displayFormat>Idea-{0000}</displayFormat>
        <label>Ideas Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas and Improvements Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>