force-app/main/default/objects/Ideas_Register__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas_and_Improvements_Register</relationshipName>
    <type>Lookup</type>
</CustomField>