force-app/main/default/objects/Ideas_Register__c/fields/AutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>AutoGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this idea auto generated from Outlook integration?</description>
    <inlineHelpText>Is this idea auto generated from Outlook integration?</inlineHelpText>
    <label>AutoGenerated?</label>
    <type>Checkbox</type>
</CustomField>