force-app/main/default/objects/Ideas_Register__c/fields/Date_Suggested__c.field-meta.xml
<CustomField>
    <fullName>Date_Suggested__c</fullName>
    <label>Date Suggested</label>
    <type>Date</type>
</CustomField>