force-app/main/default/objects/Ideas_Register__c/fields/Improvement_Overview__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Overview__c</fullName>
    <description>Overview of suggestion for improvement or idea</description>
    <inlineHelpText>Overview of suggestion for improvement or idea</inlineHelpText>
    <label>Improvement Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>