force-app/main/default/objects/Ideas_Register__c/fields/Si__c.field-meta.xml
<CustomField>
    <fullName>Si__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Ideas and Improvements Register</relationshipLabel>
    <relationshipName>Ideas_and_Improvements_Register</relationshipName>
    <type>Lookup</type>
</CustomField>