force-app/main/default/objects/Ideas_Register__c/fields/Suggested_BY__c.field-meta.xml
<CustomField>
    <fullName>Suggested_BY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ideas and Improvements Register</relationshipLabel>
    <relationshipName>Ideas_and_Improvements_Register</relationshipName>
    <type>Lookup</type>
</CustomField>