force-app/main/default/objects/Ideas_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AutoGenerated__c</columns>
    <columns>Date_Suggested__c</columns>
    <columns>Suggested_BY__c</columns>
    <columns>Category__c</columns>
    <columns>Si__c</columns>
    <columns>Improvement_Overview__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Log__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>