force-app/main/default/objects/Ideas_Register__c/listViews/In_Exec_Discussion.listView-meta.xml
<ListView>
    <fullName>In_Exec_Discussion</fullName>
    <columns>NAME</columns>
    <columns>Date_Suggested__c</columns>
    <columns>Suggested_BY__c</columns>
    <columns>Category__c</columns>
    <columns>Si__c</columns>
    <columns>Improvement_Overview__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Log__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Exec Meeting</value>
    </filters>
    <label>In Exec Discussion</label>
</ListView>