force-app/main/default/objects/Ideas_Register__c/listViews/IT_Ideas.listView-meta.xml
<ListView>
    <fullName>IT_Ideas</fullName>
    <columns>NAME</columns>
    <columns>Date_Suggested__c</columns>
    <columns>Suggested_BY__c</columns>
    <columns>Category__c</columns>
    <columns>Si__c</columns>
    <columns>Improvement_Overview__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Log__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,In-Progress,Exec Meeting</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>IT</value>
    </filters>
    <label>IT Ideas</label>
</ListView>